Fix overflow on contact-page form

--- a/sass/modules/_contact.scss
+++ b/sass/modules/_contact.scss
@@ -12,7 +12,7 @@
     padding-right: 1em;
     padding-bottom: 0;
     background: $extralightgray;
-    overflow-x: scroll;
+    overflow-x: hidden;
 
     textarea,
     input[type=text] {
